
2008-01-09 tdb
 * Changed name of ordervalue_single to ordervalue_basic, fixing #3201
 * Added $session and $langid to call to ordervalue_basic, really fixing #3201

2008-01-11 tdb
 * import_subjects should use the import ids, fixing #3209

2008-01-14 tdb
 * Use Text::Unidecode to create sort values, fixing #3200
 * Removed Text::BibTeX dependency, fixing #3202
 * EPrints::Metafield::render_value_withopts now checks definedness by using
    EPrints::Utils::is_set, fixing #2923
 * Added quote_value and quote_identifier methods to Database.pm
 * Replaced all occurences of prep_value with quote_value
 * Replaced all (?) occurences of \" in database values with quote_value
 * Added check for whether the subjects field is configured in MODS (METS)
    export

2008-01-15 tdb
 * Check whether an executable is set as "NOTFOUND", fixing #2874
 * Replaced $session->html_phrase with $self->html_phrase in Screen::Import,
    fixing #3203
 * Now checks for visibility all in Screen::Import, fixing #3207

2008-01-15 cjg
 * Added code to keep track of which phrases were used during a $session
 * Added code to report on this, but currently disabled the report.

2008-01-15 cjg
 * Added template option to views.
 * Changed "template_id" option in page generation to "template"

2008-01-16 cjg
 * Added admin screen to reload config. Same as epadmin reload.
 * Added method to Repository to test if the current configuration is valid.
 * Added a missing \n to a errror message in Repository.pm

2008-01-16 cjg
 * Minor tweak to supress undef warning in Language.pm. Fixes #3199

2008-01-16 tdb
 * Overhauled Import plugins to use a Handler mechanism to output errors,
    warnings and object parse/creation events (should be transparent to the
	actual plugins), fixing #3206, #2812, #3205

2008-01-16 cjg
 * Added riched syntax to user role specification
 * Added web-based configuration editing (needs to have "config" option added
    to a role to activate it)
