@@ -464,7 +464,10 @@ sub commit
 		# don't do anything if there isn't anything to do
 		return( 1 ) unless $force;
 	}
-	$self->set_value( "rev_number", ($self->get_value( "rev_number" )||0) + 1 );	
+	if( $self->{non_volatile_change} )
+	{
+		$self->set_value( "rev_number", ($self->get_value( "rev_number" )||0) + 1 );	
+	}
 
 	my $user_ds = $self->{session}->get_repository->get_dataset( "user" );
 	$self->tidy;
